# nova-thousands

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py  version.py
etc/: nova-thousands.conf
nova-thousands/: __init__.py
novathousands/: __init__.py  driver.py
novathousands/cmd/: thousands.py
tests/unit/: test.py
