[metadata]
name = nova-thousands
version = 0.1
summary = This is a fake nova compute driver to simulate thousands of nova compute nodes
description_file = README.md
author = Kun Huang
author_email = gareth@openstacker.org
maintainer = Kun Huang
maintainer_email = gareth@openstacker.org
home_page = None
license = Apache Software License
classifier =
    Environment :: <some environment>
    Intended Audience :: Information Technology
    Intended Audience :: System Adiministrators
    License :: OSI Approved :: Apache Software License
    Operation System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7

[files]
packages = nova-thousands
